--- a/projects/javaScript/DOM/range/styles.css
+++ b/projects/javaScript/DOM/range/styles.css
@@ -1,24 +1,47 @@
-.range-element {
-  margin-top: 50%;
+body {
+  background-color: #333333;
+}
+body .range-element {
+  margin: 3rem auto;
   position: relative;
   width: 90vw;
   height: 6.5rem;
-  background-color: rgb(209, 155, 91);
-  border-radius: 3rem;
+  background-color: #d3d3d3;
+  border-radius: 4rem;
 }
-.range-element .rail {
+body .range-element .rail {
   width: 100%;
-  background-color: lightgreen;
+  background-color: #808080;
   height: 0.5rem;
   position: absolute;
-  top: 3.25rem;
+  top: 2.875rem;
+  border-radius: 1rem;
 }
-.range-element .runner {
+body .range-element .runner {
   position: absolute;
   top: 0;
   height: 1.5rem;
   width: 1.5rem;
-  border: 2.5rem solid rgb(4, 81, 77);
-  background-color: rgb(0, 0, 0);
+  border: 2.5rem solid #555555;
+  background-color: #c0c0c0;
   border-radius: 100%;
+}
+body .range-element .runner .needle {
+  position: absolute;
+  width: 1px;
+  height: 10.5rem;
+  left: 0.75rem;
+  background-color: #000;
+}
+body .ruler {
+  display: block;
+  margin: 1rem auto;
+  width: 90vw;
+  height: 6.5rem;
+  background-color: #d3d3d3;
+  border-radius: 4rem;
+}
+body .ruler .canvas {
+  width: 90vw;
+  height: 100%;
 }/*# sourceMappingURL=styles.css.map */
