--- a/projects/javaScript/DOM/range/styles.css
+++ b/projects/javaScript/DOM/range/styles.css
@@ -1,15 +1,23 @@
+html,
 body {
   background-color: #333333;
+  margin: 0;
+  padding: 0;
 }
-body .range-element {
-  margin: 3rem auto;
+html .container,
+body .container {
+  margin: 3rem;
+}
+html .container .range-element,
+body .container .range-element {
   position: relative;
-  width: 90vw;
+  width: 100%;
   height: 6.5rem;
   background-color: #d3d3d3;
   border-radius: 4rem;
 }
-body .range-element .rail {
+html .container .range-element .rail,
+body .container .range-element .rail {
   width: 100%;
   background-color: #808080;
   height: 0.5rem;
@@ -17,7 +25,8 @@ body .range-element .rail {
   top: 2.875rem;
   border-radius: 1rem;
 }
-body .range-element .runner {
+html .container .range-element .runner,
+body .container .range-element .runner {
   position: absolute;
   top: 0;
   height: 1.5rem;
@@ -26,22 +35,24 @@ body .range-element .runner {
   background-color: #c0c0c0;
   border-radius: 100%;
 }
-body .range-element .runner .needle {
+html .container .range-element .runner .needle,
+body .container .range-element .runner .needle {
   position: absolute;
   width: 1px;
   height: 10.5rem;
   left: 0.75rem;
   background-color: #000;
 }
-body .ruler {
+html .container .ruler,
+body .container .ruler {
+  margin-top: 1rem;
   display: block;
-  margin: 1rem auto;
-  width: 90vw;
+  min-width: 100%;
   height: 6.5rem;
   background-color: #d3d3d3;
-  border-radius: 4rem;
 }
-body .ruler .canvas {
-  width: 90vw;
+html .container .ruler .canvas,
+body .container .ruler .canvas {
+  min-width: 100%;
   height: 100%;
 }/*# sourceMappingURL=styles.css.map */
