--- a/projects/javaScript/DOM/range/styles.scss
+++ b/projects/javaScript/DOM/range/styles.scss
@@ -22,6 +22,7 @@ $runner-center-color: #c0c0c0;
 
 html,
 body {
+  box-sizing: border-box;
   background-color: #333333;
   margin: 0;
   padding: 0;
@@ -29,6 +30,9 @@ body {
     // width: 100%;
     // height: 50vh;
     margin: 3rem;
+    h2 {
+      text-align: center;
+    }
     .range-element {
       position: relative;
       width: 100%;
@@ -55,7 +59,7 @@ body {
         .needle {
           position: absolute;
           width: 1px;
-          height: $runner-height * 7;
+          height: $runner-height * 6;
           left: $runner-width/2;
           background-color: #000;
         }
@@ -64,14 +68,9 @@ body {
     .ruler {
       margin-top: 1rem;
       display: block;
-      min-width: 100%;
       height: 2 * ($runner-height + 1) + $runner-height;
       background-color: $component-bg;
       // border-radius: 2 * $runner-height + 1rem;
-      .canvas {
-        min-width: 100%;
-        height: 100%;
-      }
     }
   }
 }
