--- a/projects/flex/gelato/myStyles.css
+++ b/projects/flex/gelato/myStyles.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Montserrat", sans-serif;
-  font-size: 18px;
+  font-size: 110%;
 }
 
 .bg {
@@ -60,8 +60,8 @@ nav ul {
   margin-bottom: 2.7rem;
 }
 .card-img {
-  height: 7rem;
   width: 7rem;
+  height: 7rem;
   object-fit: cover;
   object-position: center;
   border-radius: 100%;
