--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+/* Convert #d2b48c to HSL */
+/* Hue: 34 (sepia hue), Saturation: 44%, Lightness: 70% */
+/* Increase lightness to make it lighter */
 html {
   font-size: 120%;
   line-height: 1.2rem;
@@ -65,7 +68,7 @@ body {
 .code-snippet {
   padding: 1em;
   font-family: "Fira Code", monospace;
-  background-color: #bdb2b2;
+  background-color: #e2cfb6;
   color: HTML-code-snippet-color;
   overflow-wrap: break-word;
   overflow-x: scroll;
@@ -103,10 +106,13 @@ code {
   margin: 1rem;
   font-family: "Fira Code", monospace;
   /* font-family: "Courier New", Courier, monospace; */
-  background-color: #ccc;
+  background-color: hsl(34, 44%, 80%);
   color: #333;
 }
 
+.pamokslas {
+  background-color: hsl(34, 44%, 72%);
+}
 .pamokslas:before {
   content: "pamokslo pradžia";
   position: relative;
@@ -159,6 +165,18 @@ h2 {
 
 h2::before {
   content: "✦ ";
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  background-color: #c69f6c;
+  text-align: center;
+  border-radius: 5px;
+  margin-bottom: 1rem;
 }
 
 /* just to have li numbering */
@@ -220,7 +238,7 @@ main {
   bottom: 0;
   left: 0;
   width: var(--contents-width);
-  border: 1px solid #bdb2b2;
+  border: 1px solid #e2cfb6;
   overflow-y: scroll;
   padding: 1rem 0.5rem;
   line-height: 2rem;
