--- a/styles.scss
+++ b/styles.scss
@@ -92,16 +92,20 @@ code {
   background-color: $code-bg;
   color: $code-color;
 }
-.pamokslas:before {
-  content: "pamokslo pradžia";
-  position: relative;
-  left: -2em;
-  background-color: $pamokslas-color;
-  transform: rotate(-2deg);
-  box-shadow: var(--shadows);
-  font-size: 0.7em;
-  padding: 0.3rem;
+.pamokslas {
+  background-color: $pamokslas-bg;
+  &:before {
+    content: "pamokslo pradžia";
+    position: relative;
+    left: -2em;
+    background-color: $pamokslas-color;
+    transform: rotate(-2deg);
+    box-shadow: var(--shadows);
+    font-size: 0.7em;
+    padding: 0.3rem;
+  }
 }
+
 .screenshots {
   width: calc(30% - 1.5rem);
   height: auto;
@@ -136,6 +140,17 @@ h2 {
 }
 h2::before {
   content: "✦ ";
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  background-color: $heading-bg;
+  text-align: center;
+  border-radius: 5px;
+  margin-bottom: 1rem;
 }
 /* just to have li numbering */
 ol {
